els-ASAP auto commit file/tag gnome-abrt-0.3.4-6.el7.src.rpm

--- a/src/gnome-abrt.spec.in
+++ b/src/gnome-abrt.spec.in
@@ -91,6 +91,7 @@ gtk-update-icon-cache %{_datadir}/icons/hicolor &>/dev/null || :
 %doc COPYING
 %{python_sitearch}/gnome_abrt
 %{_datadir}/%{name}
+%{_datadir}/%{name}/ui
 %{_bindir}/%{name}
 %{_datadir}/applications/*
 %{_datadir}/appdata/*
@@ -100,6 +101,31 @@ gtk-update-icon-cache %{_datadir}/icons/hicolor &>/dev/null || :
 
 
 %changelog
+* Thu Dec 19 2013 Jakub Filak <jfilak@redhat.com> 0.3.4-1
+- Do not use deprecated GObject API
+- Make gnome-abrt compatible with Python GObject < 3.7.2
+- Do not fail if there is no Problem D-Bus service
+- Make all labels selectable
+- spec: Install UI files
+- Fix locales handling
+- Run xdg-open for problem directory nonblocking
+- Expand list of problems
+- Update translations
+
+* Sat Oct 26 2013 Jakub Filak <jfilak@redhat.com> 0.3.3-1
+- Make problem list resizable
+- Make info about Reported state of problem more clear
+- Less confusing message about missing Bugzilla ticket
+
+* Fri Oct 04 2013 Jakub Filak <jfilak@redhat.com> 0.3.2-1
+- Fix a bug in SIGCHLD handler causing 100% CPU usage
+- Show "yes" in Reported field only if no URL is available
+- Load only the most recent reported to value
+- Check if Application has valid name in filter fn
+- Do not change old selection upon reloading
+- Fix issues found by new pylint
+- Do not crash on None in signal handler
+
 * Thu Sep 12 2013 Jakub Filak <jfilak@redhat.com> 0.3.1-1
 - Improve user experience
 - Make About dialog transient for the main window
